--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    
+    <header>
+
+    </header>
+    <footer>
+        
+    </footer>
 </body>
 </html>
