--- a/index.html
+++ b/index.html
@@ -4,15 +4,76 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="normalize.css">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="./style/normalize.css">
+    <link rel="stylesheet" href="./style/index.css">
 </head>
 <body>
-    <header>
-
-    </header>
-    <footer>
-        
-    </footer>
+    <div class="container">
+        <header>
+            <div class="header">
+                <h1>Becca Peckman</h1>
+                <nav class="nav-bar">
+                    <a class="link-button nav-button" id="current-page-button" href="index.html">Home</a>
+                    <a class="link-button nav-button" href="about.html">About</a>
+                    <a class="link-button nav-button" href="contact.html">Contact</a>
+                    <a class="link-button nav-button" href="projects.html">Projects</a>
+                </nav>
+            </div>
+        </header>
+        <section class="content">
+            <div class="intro">
+                <div class="main-image">
+                    <img src="https://i.picsum.photos/id/282/1000/600.jpg?hmac=Zj9Tp0PjbtR4_Q4_oB40l3D2qr-1GBca0TmcVCMHaX4" alt="">
+                </div>
+                <div class="text-container">
+                    <div class="main-text">
+                        <h2>Becca Peckman</h2>
+                        <a id="projects-button" class="link-button" href="projects.html">My Projects</a>
+                        <p>I have a background in Java, but this year I taught myself Python and am now in a program to learn web development. On my weekends, I've been learning Rust with a few friends.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="gallery">
+                <div class="img-caption">
+                    <img class="gallery-img" src="https://i.picsum.photos/id/579/200/200.jpg?hmac=23fWj_34nrlHUFFsNp_a49abuuXPMHAqJt_DAj3ARPQ" alt="">
+                    <p class="gallery-caption">title of a</p>
+                </div>
+                <div class="img-caption">
+                    <img class="gallery-img" src="https://i.picsum.photos/id/579/200/200.jpg?hmac=23fWj_34nrlHUFFsNp_a49abuuXPMHAqJt_DAj3ARPQ" alt="">
+                    <p class="gallery-caption">project</p>
+                </div>
+                <div class="img-caption">
+                    <img class="gallery-img" src="https://i.picsum.photos/id/579/200/200.jpg?hmac=23fWj_34nrlHUFFsNp_a49abuuXPMHAqJt_DAj3ARPQ" alt="">
+                    <p class="gallery-caption">might go</p>
+                </div>
+                <div class="img-caption">
+                    <img class="gallery-img" src="https://i.picsum.photos/id/579/200/200.jpg?hmac=23fWj_34nrlHUFFsNp_a49abuuXPMHAqJt_DAj3ARPQ" alt="">
+                    <p class="gallery-caption">right here</p>
+                </div>
+                <div class="img-caption">
+                    <img class="gallery-img" src="https://i.picsum.photos/id/579/200/200.jpg?hmac=23fWj_34nrlHUFFsNp_a49abuuXPMHAqJt_DAj3ARPQ" alt="">
+                    <p class="gallery-caption">cool thing</p>
+                </div>
+                <div class="img-caption">
+                    <img class="gallery-img" src="https://i.picsum.photos/id/579/200/200.jpg?hmac=23fWj_34nrlHUFFsNp_a49abuuXPMHAqJt_DAj3ARPQ" alt="">
+                    <p class="gallery-caption">fun thing</p>
+                </div>
+                <div class="img-caption">
+                    <img class="gallery-img" src="https://i.picsum.photos/id/579/200/200.jpg?hmac=23fWj_34nrlHUFFsNp_a49abuuXPMHAqJt_DAj3ARPQ" alt="">
+                    <p class="gallery-caption">spicy thing</p>
+                </div>
+                <div class="img-caption">
+                    <img class="gallery-img" src="https://i.picsum.photos/id/579/200/200.jpg?hmac=23fWj_34nrlHUFFsNp_a49abuuXPMHAqJt_DAj3ARPQ" alt="">
+                    <p class="gallery-caption">special thing</p>
+                </div>
+            </div>
+        </section>
+        <footer>
+            <div class="footer">
+                    <h2>Like what you see?</h2>
+                    <a id="contact-button" class="link-button" href="contact.html">Contact Me</a>
+            </div>
+        </footer>
+    </div>
 </body>
 </html>
