--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <header>
-            <div class="header">
+            <!-- <div class="header"> -->
                 <h1>Becca Peckman</h1>
                 <nav class="nav-bar">
                     <a class="link-button nav-button" id="current-page-button" href="index.html">Home</a>
@@ -18,7 +18,7 @@
                     <a class="link-button nav-button" href="contact.html">Contact</a>
                     <a class="link-button nav-button" href="projects.html">Projects</a>
                 </nav>
-            </div>
+            <!-- </div> -->
         </header>
 
         <section class="intro">
@@ -66,10 +66,10 @@
         </section>
         
         <footer>
-            <div class="footer">
+            <!-- <div class="footer"> -->
                     <h2>Like what you see?</h2>
                     <a id="contact-button" class="link-button" href="contact.html">Contact Me</a>
-            </div>
+            <!-- </div> -->
         </footer>
     </div>
 </body>
