--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Document</title>
     <link rel="stylesheet" href="./style/normalize.css">
-    <link rel="stylesheet" href="./style/index-refactor.css">
+    <link rel="stylesheet" href="./style/index.css">
 </head>
 <body>
     <div class="container">
