--- a/index.html
+++ b/index.html
@@ -10,15 +10,13 @@
 <body>
     <div class="container">
         <header>
-            <!-- <div class="header"> -->
-                <h1>Becca Peckman</h1>
-                <nav class="nav-bar">
-                    <a class="link-button nav-button" id="current-page-button" href="index.html">Home</a>
-                    <a class="link-button nav-button" href="about.html">About</a>
-                    <a class="link-button nav-button" href="contact.html">Contact</a>
-                    <a class="link-button nav-button" href="projects.html">Projects</a>
-                </nav>
-            <!-- </div> -->
+            <h1>Becca Peckman</h1>
+            <nav class="nav-bar">
+                <a class="link-button nav-button" id="current-page-button" href="index.html">Home</a>
+                <a class="link-button nav-button" href="about.html">About</a>
+                <a class="link-button nav-button" href="contact.html">Contact</a>
+                <a class="link-button nav-button" href="projects.html">Projects</a>
+            </nav>
         </header>
 
         <section class="intro">
@@ -32,44 +30,42 @@
 
         <section class="gallery">
             <div class="image-container">
-                <img class="image" src="https://i.picsum.photos/id/427/300/300.jpg?hmac=JYcuQURhrFc6zdLf_J6ItUzSDGT9YX0BZ1iGO1tezFg" alt="">
+                <img src="https://i.picsum.photos/id/427/300/300.jpg?hmac=JYcuQURhrFc6zdLf_J6ItUzSDGT9YX0BZ1iGO1tezFg" alt="">
                 <p class="caption">title of a</p>
             </div>
             <div class="image-container">
-                <img class="image" src="https://i.picsum.photos/id/427/300/300.jpg?hmac=JYcuQURhrFc6zdLf_J6ItUzSDGT9YX0BZ1iGO1tezFg" alt="">
+                <img src="https://i.picsum.photos/id/427/300/300.jpg?hmac=JYcuQURhrFc6zdLf_J6ItUzSDGT9YX0BZ1iGO1tezFg" alt="">
                 <p class="caption">project</p>
             </div>
             <div class="image-container">
-                <img class="image" src="https://i.picsum.photos/id/427/300/300.jpg?hmac=JYcuQURhrFc6zdLf_J6ItUzSDGT9YX0BZ1iGO1tezFg" alt="">
+                <img src="https://i.picsum.photos/id/427/300/300.jpg?hmac=JYcuQURhrFc6zdLf_J6ItUzSDGT9YX0BZ1iGO1tezFg" alt="">
                 <p class="caption">might go</p>
             </div>
             <div class="image-container">
-                <img class="image" src="https://i.picsum.photos/id/427/300/300.jpg?hmac=JYcuQURhrFc6zdLf_J6ItUzSDGT9YX0BZ1iGO1tezFg" alt="">
+                <img src="https://i.picsum.photos/id/427/300/300.jpg?hmac=JYcuQURhrFc6zdLf_J6ItUzSDGT9YX0BZ1iGO1tezFg" alt="">
                 <p class="caption">right here</p>
             </div>
             <div class="image-container">
-                <img class="image" src="https://i.picsum.photos/id/427/300/300.jpg?hmac=JYcuQURhrFc6zdLf_J6ItUzSDGT9YX0BZ1iGO1tezFg" alt="">
+                <img src="https://i.picsum.photos/id/427/300/300.jpg?hmac=JYcuQURhrFc6zdLf_J6ItUzSDGT9YX0BZ1iGO1tezFg" alt="">
                 <p class="caption">cool thing</p>
             </div>
             <div class="image-container">
-                <img class="image" src="https://i.picsum.photos/id/427/300/300.jpg?hmac=JYcuQURhrFc6zdLf_J6ItUzSDGT9YX0BZ1iGO1tezFg" alt="">
+                <img src="https://i.picsum.photos/id/427/300/300.jpg?hmac=JYcuQURhrFc6zdLf_J6ItUzSDGT9YX0BZ1iGO1tezFg" alt="">
                 <p class="caption">fun thing</p>
             </div>
             <div class="image-container">
-                <img class="image" src="https://i.picsum.photos/id/427/300/300.jpg?hmac=JYcuQURhrFc6zdLf_J6ItUzSDGT9YX0BZ1iGO1tezFg" alt="">
+                <img src="https://i.picsum.photos/id/427/300/300.jpg?hmac=JYcuQURhrFc6zdLf_J6ItUzSDGT9YX0BZ1iGO1tezFg" alt="">
                 <p class="caption">spicy thing</p>
             </div>
             <div class="image-container">
-                <img class="image" src="https://i.picsum.photos/id/427/300/300.jpg?hmac=JYcuQURhrFc6zdLf_J6ItUzSDGT9YX0BZ1iGO1tezFg" alt="">
+                <img src="https://i.picsum.photos/id/427/300/300.jpg?hmac=JYcuQURhrFc6zdLf_J6ItUzSDGT9YX0BZ1iGO1tezFg" alt="">
                 <p class="caption">special thing</p>
             </div>
         </section>
         
         <footer>
-            <!-- <div class="footer"> -->
-                    <h2>Like what you see?</h2>
-                    <a id="contact-button" class="link-button" href="contact.html">Contact Me</a>
-            <!-- </div> -->
+            <h2>Like what you see?</h2>
+            <a id="contact-button" class="link-button" href="contact.html">Contact Me</a>
         </footer>
     </div>
 </body>
