added alt text to photos for accessiblity

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <header>
             <h1>Becca Peckman</h1>
-            <nav class="nav-bar">
+            <nav>
                 <a class="link-button nav-button" id="current-page-button" href="index.html">Home</a>
                 <a class="link-button nav-button" href="about.html">About</a>
                 <a class="link-button nav-button" href="contact.html">Contact</a>
@@ -20,7 +20,7 @@
         </header>
 
         <section class="intro">
-            <img src="https://i.picsum.photos/id/282/1000/600.jpg?hmac=Zj9Tp0PjbtR4_Q4_oB40l3D2qr-1GBca0TmcVCMHaX4" alt="">
+            <img src="https://i.picsum.photos/id/282/1000/600.jpg?hmac=Zj9Tp0PjbtR4_Q4_oB40l3D2qr-1GBca0TmcVCMHaX4" alt="main placeholder image">
             <div class="text-container">
                 <h2>Becca Peckman</h2>
                 <a id="projects-button" class="link-button" href="projects.html">My Projects</a>
@@ -30,35 +30,35 @@
 
         <section class="gallery">
             <div class="image-container">
-                <img src="https://i.picsum.photos/id/427/300/300.jpg?hmac=JYcuQURhrFc6zdLf_J6ItUzSDGT9YX0BZ1iGO1tezFg" alt="">
+                <img src="https://i.picsum.photos/id/427/300/300.jpg?hmac=JYcuQURhrFc6zdLf_J6ItUzSDGT9YX0BZ1iGO1tezFg" alt="placeholder image">
                 <p class="caption">title of a</p>
             </div>
             <div class="image-container">
-                <img src="https://i.picsum.photos/id/427/300/300.jpg?hmac=JYcuQURhrFc6zdLf_J6ItUzSDGT9YX0BZ1iGO1tezFg" alt="">
+                <img src="https://i.picsum.photos/id/427/300/300.jpg?hmac=JYcuQURhrFc6zdLf_J6ItUzSDGT9YX0BZ1iGO1tezFg" alt="placeholder image">
                 <p class="caption">project</p>
             </div>
             <div class="image-container">
-                <img src="https://i.picsum.photos/id/427/300/300.jpg?hmac=JYcuQURhrFc6zdLf_J6ItUzSDGT9YX0BZ1iGO1tezFg" alt="">
+                <img src="https://i.picsum.photos/id/427/300/300.jpg?hmac=JYcuQURhrFc6zdLf_J6ItUzSDGT9YX0BZ1iGO1tezFg" alt="placeholder image">
                 <p class="caption">might go</p>
             </div>
             <div class="image-container">
-                <img src="https://i.picsum.photos/id/427/300/300.jpg?hmac=JYcuQURhrFc6zdLf_J6ItUzSDGT9YX0BZ1iGO1tezFg" alt="">
+                <img src="https://i.picsum.photos/id/427/300/300.jpg?hmac=JYcuQURhrFc6zdLf_J6ItUzSDGT9YX0BZ1iGO1tezFg" alt="placeholder image">
                 <p class="caption">right here</p>
             </div>
             <div class="image-container">
-                <img src="https://i.picsum.photos/id/427/300/300.jpg?hmac=JYcuQURhrFc6zdLf_J6ItUzSDGT9YX0BZ1iGO1tezFg" alt="">
+                <img src="https://i.picsum.photos/id/427/300/300.jpg?hmac=JYcuQURhrFc6zdLf_J6ItUzSDGT9YX0BZ1iGO1tezFg" alt="placeholder image">
                 <p class="caption">cool thing</p>
             </div>
             <div class="image-container">
-                <img src="https://i.picsum.photos/id/427/300/300.jpg?hmac=JYcuQURhrFc6zdLf_J6ItUzSDGT9YX0BZ1iGO1tezFg" alt="">
+                <img src="https://i.picsum.photos/id/427/300/300.jpg?hmac=JYcuQURhrFc6zdLf_J6ItUzSDGT9YX0BZ1iGO1tezFg" alt="placeholder image">
                 <p class="caption">fun thing</p>
             </div>
             <div class="image-container">
-                <img src="https://i.picsum.photos/id/427/300/300.jpg?hmac=JYcuQURhrFc6zdLf_J6ItUzSDGT9YX0BZ1iGO1tezFg" alt="">
+                <img src="https://i.picsum.photos/id/427/300/300.jpg?hmac=JYcuQURhrFc6zdLf_J6ItUzSDGT9YX0BZ1iGO1tezFg" alt="placeholder image">
                 <p class="caption">spicy thing</p>
             </div>
             <div class="image-container">
-                <img src="https://i.picsum.photos/id/427/300/300.jpg?hmac=JYcuQURhrFc6zdLf_J6ItUzSDGT9YX0BZ1iGO1tezFg" alt="">
+                <img src="https://i.picsum.photos/id/427/300/300.jpg?hmac=JYcuQURhrFc6zdLf_J6ItUzSDGT9YX0BZ1iGO1tezFg" alt="placeholder image">
                 <p class="caption">special thing</p>
             </div>
         </section>
